Сделал networkproxy совместимым с jdk 11